--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -2,6 +2,7 @@
 
 .App {
   display: flex;
+  overflow: hidden;
 }
 
 .container {
@@ -9,10 +10,32 @@
   width: calc(100% - 300px);
   height: 100vh;
   overflow-y: scroll;
+  overflow-x: hidden;
   position: relative;
+  &::-webkit-scrollbar {
+    width: 6px;
+  }
+
+  &::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: $primary;
+  }
 }
 
 .gif-grid {
   display: flex;
   flex-wrap: wrap;
+}
+
+@media (max-width: 768px) {
+  .App {
+    flex-direction: column;
+  }
+  .container {
+    height: calc(100vh - 62px);
+    width: 100%;
+  }
 }
