--- a/src/styles/search.scss
+++ b/src/styles/search.scss
@@ -3,27 +3,27 @@
 .search-panel {
   position: relative;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  background: $neutral;
-  padding: 15px;
-  border-radius: 24px;
+  background: $primaryLight;
+  padding: 30px 15px;
+  margin: -15px -15px 15px;
   div:first-child {
     flex-basis: 50%;
     position: relative;
     z-index: 9999;
   }
-  div,
+  & > div,
   label {
     margin-right: 25px;
+    color: $primary;
+    font-weight: 700;
   }
-  label {
-    color: $dark;
-  }
+
   &-input {
     border-radius: $border;
-    padding: 10px 15px;
+    padding: 10px 50px 10px 15px;
     width: 100%;
     font-weight: 700;
     &.active {
@@ -31,6 +31,7 @@
     }
     &::placeholder {
       font-weight: 400;
+      color: $dark;
     }
   }
   &-button {
@@ -39,6 +40,9 @@
     right: 10px;
     top: 50%;
     transform: translateY(-50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
     &:hover {
       color: $primary;
     }
@@ -50,35 +54,39 @@
     padding: 10px 5px;
     border-radius: $border;
     background: $white;
-    // font-weight: 700;
+    color: $dark;
     border: none;
+  }
+  &-result {
+    margin-bottom: 15px;
+    padding-bottom: 15px;
+    border-bottom: 1px dashed $neutral;
+    span {
+      font-weight: 700;
+    }
   }
 }
 
 .autocomplete {
   background: $white;
   overflow: hidden;
-  border-radius: $border;
+  border-radius: 0 0 $border $border;
   position: absolute;
-  width: calc(50% - 15px);
-  top: calc(100% - 53px);
-  animation: slide-bottom 1.25s ease;
+  width: 100%;
+  top: 0;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-  z-index: 999;
-  padding-top: 40px;
-  ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    li {
-      padding: 10px 15px;
-      cursor: pointer;
-      border-top: 1px dashed $neutral;
-      &.active {
-        color: $white;
-        background: $primary;
-        border-top-color: $primary;
-      }
+  z-index: -1;
+  margin: 10px 0 0 0;
+  padding: 29px 0 0 0;
+  list-style: none;
+  li {
+    padding: 10px 15px;
+    cursor: pointer;
+    border-top: 1px dashed $neutral;
+    &.active {
+      color: $white;
+      background: $primary;
+      border-top-color: $primary;
     }
   }
   &-container {
@@ -87,8 +95,15 @@
     height: 100%;
     top: 0;
     left: 0;
-    z-index: 99;
+    z-index: -2;
   }
+}
+
+.not-found {
+  height: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 @media (max-width: 1280px) {
@@ -103,8 +118,17 @@
       margin-bottom: 25px;
     }
   }
-  .autocomplete {
-    width: calc(100% - 30px);
-    top: calc(0% + 15px);
+}
+
+@media (max-width: 425px) {
+  .search-panel {
+    flex-direction: column;
+    align-items: stretch;
+    label {
+      text-align: end;
+      &:first-of-type {
+        margin-bottom: 25px;
+      }
+    }
   }
 }
