--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -101,7 +101,7 @@
       height: 48px;
       padding: 10px;
       margin-right: 10px;
-      border-radius: 50%;
+      border-radius: $border;
       background: $neutral;
       &:hover {
         opacity: 0.6;
